raspi-firmware (1.20210111+ds-2) UNRELEASED; urgency=medium

  * Added better detection code to provide a working serial console

 -- Gunnar Wolf <gwolf@debian.org>  Thu, 14 Jan 2021 13:53:53 -0600

raspi-firmware (1.20210111+ds-1) unstable; urgency=medium

  * New upstream release
  * Several lintian low-priority messages cleaned
    * debhelper compat 10→13
    * Remove redundant Priority/Section tags from binary packages when
      they replicate the source package's respective tag
    * Vcs-Browser should not include the trailing ".git" particle
    * Standards-version 4.5.0 → 4.5.1.0
    * Override warnings "unused-file-paragraph-in-dep5-copyright" and
      "wildcard-matches-nothing-in-dep5-copyright", as relevant files
      came from a different source (documented in debian/copyright)
    * Added "+ds" suffix to produced upstream version in debian/watch
      indicating it is different from the upstream release

 -- Gunnar Wolf <gwolf@debian.org>  Mon, 11 Jan 2021 17:57:36 -0600

raspi-firmware (1.20201022-3) unstable; urgency=medium

  * One more stab at fixing architecture detection - It gets tricky! :-(
    (Closes: #975943)
  * Dropped dependency on file - no longer needed

 -- Gunnar Wolf <gwolf@debian.org>  Sun, 03 Jan 2021 17:00:16 -0600

raspi-firmware (1.20201022-2) unstable; urgency=medium

  * Team upload.

  [ Diederik de Haas ]
  * Fix arch detection of latest kernel (Closes: #975943).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 20 Dec 2020 10:50:54 -0300

raspi-firmware (1.20201022-1) unstable; urgency=medium

  * New upstream version 1.20201022
  * Use DPKG_MAINTSCRIPT_ARCH for getting system architecture instead of
    dpkg --print-architecture (Closes: #971748)
  * Drop deprecated declaration of elevator=deadline (Closes: #971882)
  * Allow to pass arbitrary parameters to the kernel via
    /etc/default/raspi-extra-cmdline (Closes: #971883, #951744)
  * Reliability fix when copying DTBs (Closes: #968376)
