@@ -1,6 +1,8 @@
 raspi-firmware (1.20210111+ds-2) UNRELEASED; urgency=medium
 
   * Added better detection code to provide a working serial console
+  * dh_strip and dh_dwz should not be run over firmware files! Disable
+    them.
 
  -- Gunnar Wolf <gwolf@debian.org>  Thu, 14 Jan 2021 13:53:53 -0600
 
